--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL : 'http://example.org/'
+baseURL : 'http://noehsueh.github.io/'
 languageCode : 'en-uk'
 title : "Noe's website"
 theme: "PaperMod"
